# miha-taskflow

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
ansible/: ansible.cfg  (+1 more)
backend/: .env.example  Dockerfile  Dockerfile.backend  Dockerfile.flower  Dockerfile.nginx  Dockerfile.worker  Makefile  alloy.hcl  docker-compose.yml  main.py  pyproject.toml  test_container_check.py
backend/app/api/: api.md
backend/app/api/v1/: __init__.py
backend/app/background/: __init__.py  base.py  beat.py  celery.py  runner.py  signals.py  tasks.py
backend/app/background/exceptions/: bt_exc.py
backend/app/cache/: __init__.py  cache.py  cache_keys.md  key_builder.py  name_key.py
backend/app/cache/exceptions/: cache_exc.py
backend/app/cli/: __main__.py  commands.py  manage.py  reindex.py
backend/app/core/: config.py  metrics.py  middleware.py
backend/app/core/config/: __init__.py  cache.py  celery.py  db.py  es.py  logging.py  security.py  sse.py  token.py
backend/app/core/exceptions/: rbac_exc.py  security_exc.py
backend/app/core/log/: logging.py  mask.py
backend/app/core/permission/: __init__.py  check_permission.py  init_rbac.py  permissions.py  role_permissions.py  seed_data.py  setup_role_permissions.py
backend/app/core/security/: __init__.py  auth.py  current_role.py  hash.py  security_result.py  token.py
backend/app/crud/: crud_result.py  group_logic.py  groups_memberships_logic.py  login_logic.py  search.py  task.py  task_logic.py  user_logic.py
backend/app/db/: __init__.py  base.py  db_helper.py  session.py
backend/app/documents/: __init__.py  comment.py  indices.json  user.py
backend/app/es/: __init__.py  client.py  faceted_search.py  indexer.py  indices.py  search.py
backend/app/examples/: __init__.py  admin_examples.py  auth_examples.py  comment_examples.py  group_examples.py  notification_examples.py  search_examples.py  task_examples.py  user_examples.py  xp_rating_examples.py
backend/app/indexes/: group.py  indices.json  notification.py  task.py  user.py
backend/app/models/: __init__.py  comment.py  group.py  group_models.py  join.py  notification.py  outbox.py  rating.py  role.py  role_models.py  task.py  task_models.py  user.py  user_models.py
backend/app/repositories/: __init__.py  comment.py  group.py  group_membership.py  join.py  notification.py  outbox.py  rating.py  role.py  task.py  task_assignee.py  uow.py  user.py  user_role.py  user_skill.py
backend/app/schemas/: __init__.py  comment.py  group.py  group_schemas.py  join.py  notification.py  rating.py  role.py  search.py  search_schema.py  search_schemas.py  task.py  task_schemas.py  token.py  token_schemas.py  user.py  user_schemas.py
backend/app/service/: __init__.py  admin.py  auth.py  base.py  bulk.py  comment.py  group.py  notification.py  outbox.py  rating.py  search.py  sse.py  task.py  user.py  xp.py
backend/app/utils/: __init__.py  case_converter.py
backend/cache/: cache.py  name_key.py
backend/context/: app.md  app_api.md  app_api_v1.md  app_api_v1_endpoints.md  app_api_v1_endpoints_context.md  app_background.md  app_background_exceptions.md  app_cache.md  app_cache_context.md  app_cache_exceptions.md  app_cli.md  app_cli_context.md  app_context.md  app_core.md  app_core_config.md  app_core_context.md  app_core_exceptions.md  app_core_log.md  app_core_log_context.md  app_core_permission.md  app_core_permission_context.md  app_core_security.md  app_core_security_context.md  app_core_sse.md  app_core_sse_context.md  app_db.md  app_db_context.md  app_db_exceptions.md  app_db_mixins.md  app_db_mixins_context.md  app_documents.md  app_documents_utils.md  app_es.md  app_es_context.md  app_es_exceptions.md  app_indexes_context.md  app_indexes_utils_context.md  app_migrations_context.md  app_models.md  app_models_context.md  (+21 more)
backend/migrations/: env.py
backend/migrations/versions/: 0a000f0839e3_add_column_description_in_usergroup.py  1f23933ea122_make_task_group_id_required.py  330ab5e92ef1_add_table_users_and_relationship_users_.py  41b285d49669_add_table_groups.py  4421e5aac69d_add_notifications_table_and_user_groups_invite_policy.py  589fa531e9b8_add_deadline_to_tasks.py  71a7c62aea57_cleanup_membership_and_roles.py  8250adad96e8_add_fields_first_name_last_name_.py  8538b9e3664b_add_comments_table.py  8e83e500f7d4_initial_migration.py  97330f8a4e2d_made_first_name_last_name_mandatory.py  ad892f317784_add_rbac_tables_permissions_roles_role_permissions_user_roles.py.py  ae6938fea45d_add_user_skills_table_and_task_spheres.py  bfe899dccc6e_fix user_roles id sequence.py  c1d2e3f4a5b6_fix_user_roles_primary_key.py  d2412df0d4a8_add_ratings_table.py  d2e3f4a5b6c7_fix_task_assignees_assigned_at.py  eca64f6fa2dd_add_contextual_roles_and_constraints.py  ed1cc5c53f35_add_join_requests_and_group_join_policy.py  ed2b72d685b4_create_task_assignees_and_enhance_.py  f1ed549f1e64_add_subgroups_visibility_and_difficulty.py  fd32d9929d79_add_outbox_table.py  fe26ffbcdc08_add_xp_today_and_task_indexes.py
backend/monitoring/: prometheus.yml
backend/nginx/: miha.conf
backend/tests/: TESTS.md  base_conftest.py  conftest.py  conftest_sqlite.py  mock_cache.py  pg_conftest.py
backend/tests/e2e/: conftest.py  test_auth_sessions.py  test_background_tasks.py  test_es_search_cache.py  test_full_user_flow.py
backend/tests/integration/: test_admin_endpoints.py  test_auth_endpoints.py  test_cache.py  test_comment_endpoints.py  test_comprehensive_edge_cases.py  test_edge_cases.py  test_group_endpoints.py  test_migrations.py  test_notification_endpoints.py  test_notification_integration.py  test_rating_endpoints.py  test_search_endpoints.py  test_task_endpoints.py  test_user_endpoints.py  test_xp_endpoints.py
backend/tests/unit/: test_admin_service.py  test_auth_service.py  test_base_service.py  test_celery_tasks.py  test_comment_service.py  test_es_indexer.py  test_es_search.py  test_group_service.py  test_key_builder.py  test_notification_service.py  test_permission.py  test_rating_service.py  test_schemas.py  test_sse_service.py  test_task_service.py  test_xp_service.py
(+149 files in other folders)
