[project]
name = "taskflow"
version = "0.1.0"
description = "TaskFlow API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.129.1",
    "uvicorn>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "celery>=5.6.2",
    "redis>=7.2.0",
    "prometheus-client>=0.24.1",
    "python-dotenv>=1.2.1",
    "greenlet>=3.3.2",
]

[dependency-groups]
dev = [                  
    "httpx>=0.28.1",
    "cookiecutter>=2.6.0",
]
lint = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "C4", "RUF"]
exclude = [".venv", ".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".vscode", ".idea", "env", "venv", "node_modules", "build", ".ruff_cache"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
disallow_untyped_defs = false   
warn_return_any = false
warn_unreachable = true
pretty = true
show_error_codes = true

