[project]
name = "taskflow"
version = "0.1.0"
description = "TaskFlow API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.129.1",
    "uvicorn>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic[asyncio]>=1.18.4",
    "celery>=5.6.2",
    "redis>=7.2.0",
    "prometheus-client>=0.24.1",
    "python-dotenv>=1.2.1",
    "greenlet>=3.3.2",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [                  
    "httpx>=0.28.1",
    "cookiecutter>=2.6.0",
]
lint = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

# RUFF
###################################################################################
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [    
    "UP",    # pyupgrade
    "I",     # isort (автозамена)
    "E",     # flake8-errors
    "W",     # flake8-warnings
    "F",     # flake8-pyflakes
    "B",     # flake8-bugbear
    "C4",    # comprehensions
    "S",     # security (bandit)
    "BLE",   # blind-except
    "T20",   # print calls
    "T10",   # debugger
    "PT",    # pytest-style
    "RUF",   # Ruff-specific
    "DTZ",   # datetimez
    "ERA",   # eradicate
    "FURB",  # refurb
]

ignore = ["B008", "F821"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"     
###################################################################################   

# MYPY
###################################################################################
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
disallow_untyped_defs = false   
warn_return_any = false
warn_unreachable = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["app.models.*"]
disable_error_code = ["name-defined"] 

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "sqlalchemy.*",
    "alembic.*",
    "asyncpg.*",
    "argon2_cffi.*",
]
ignore_missing_imports = true
###################################################################################
