[project]
name = "taskflow"
version = "0.1.0"
description = "TaskFlow API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.129.1",
    "uvicorn>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic[async,asyncio]>=1.18.4",
    "celery>=5.6.2",
    "redis[hiredis]>=7.2.0",
    "prometheus-client>=0.24.1",
    "python-dotenv>=1.2.1",
    "greenlet>=3.3.2",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "fastapi-cache2>=0.2.2",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "cookiecutter>=2.6.0",
]
lint = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "aiosqlite>=0.20.0",
]

# TESTS
###################################################################################
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

# RUFF
###################################################################################
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "UP",    # pyupgrade
    "I",     # isort (auto-fixable)
    "E",     # flake8-errors
    "W",     # flake8-warnings
    "F",     # flake8-pyflakes
    "B",     # flake8-bugbear
    "C4",    # comprehensions
    "S",     # security (bandit)
    "BLE",   # blind-except
    "T20",   # print calls
    "T10",   # debugger
    "PT",    # pytest-style
    "RUF",   # Ruff-specific
    "DTZ",   # datetimez
    "ERA",   # eradicate
    "FURB",  # refurb
]
ignore = [
    "B008", # do not flag function calls in default argument values
    "F821", # allow undefined names
    "S101", # allow `assert` usage, especially in test files
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

# MYPY
###################################################################################
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unreachable = true
pretty = true
show_error_codes = true


[[tool.mypy.overrides]]
module = ["app.models.*"]
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "sqlalchemy.*",
    "alembic.*",
    "asyncpg.*",
    "argon2_cffi.*",
]
ignore_missing_imports = true
###################################################################################
